# esp32s3r8_light_ring

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
inc/: app_config.h  board_led.h  captive_portal.h  http_server.h  light_effects.h  light_types.h  palette_compress.h  palette_store.h  scenario_store.h  ui_effect.h  ui_page.h  ui_palette.h  ui_scenario.h  wifi_manager.h
main/: CMakeLists.txt  Kconfig.projbuild  led_strip_encoder.c  led_strip_encoder.h  main.c
src/: CMakeLists.txt  main.c
src/effects/: light_effects.c  palette_compress.c  palette_store.c  scenario_store.c
src/hardware/: board_led.c
src/network/: captive_portal.c  http_server.c  wifi_manager.c
src/ui/: ui_effect.c  ui_page.c  ui_palette.c  ui_scenario.c
